--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     </div>
 
-    <a class="botao-carrinho hidden" onclick="cardapio.metodos.abrirCarrinho(true)">
+    <a class="botao-carrinho hidden animated bounceIn" onclick="cardapio.metodos.abrirCarrinho(true)">
         <div class="badge-total-carrinho">0</div>
         <i class="fa fa-shopping-bag"></i>
     </a>
@@ -25,7 +25,7 @@
     <header>
         <div class="container">
             <nav class="navbar navbar-expand-lg pl-0 pr-0">
-                <a class="navbar-brand">
+                <a class="navbar-brand wow fadeIn">
                     <img src="img/logo.png" width='160' alt="logo do menu online" class="img-logo">
                 </a>
 
@@ -35,14 +35,14 @@
                     </span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav ml-auto mr-auto">
+                    <ul class="navbar-nav ml-auto mr-auto wow fadeIn">
                         <li class="nav-item"><a href="#reservas" class="nav-link">Reserva</a></li>
                         <li class="nav-item"><a href="#servicos" class="nav-link">Serviços</a></li>
                         <li class="nav-item"><a href="#cardapio" class="nav-link">Cardápio</a></li>
                         <li class="nav-item"><a href="#depoimentos" class="nav-link">Depoimentos</a></li>
                     </ul>
 
-                    <a class="btn btn-white btn-icon" onclick="cardapio.metodos.abrirCarrinho(true)">
+                    <a class="btn btn-white btn-icon wow fadeIn" onclick="cardapio.metodos.abrirCarrinho(true)">
                         Meu carrinho <span class="icon">
                             <div class="container-total-carrinho badge-total-carrinho hidden">0</div>
                             <i class="fa fa-shopping-bag"></i>
@@ -60,12 +60,12 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="d-flex text-banner">
-                            <h1><strong>Escolha sua comida <strong class="color-primary">favorita.</strong></strong>
+                            <h1 class="wow fadeInLeft"><strong>Escolha sua comida <strong class="color-primary">favorita.</strong></strong>
                             </h1>
-                            <p>Aproveite nosso cardápio! Escolha o que desejar e receber em sua casa de forma rápida e
+                            <p class="wow fadeInLeft delay-02s">Aproveite nosso cardápio! Escolha o que desejar e receber em sua casa de forma rápida e
                                 segura.</p>
 
-                            <div>
+                            <div class="wow fadeIn delay-05s">
                                 <a class="btn btn-yellow mt-4 mr-3">
                                     Ver cardápio
                                 </a>
@@ -78,22 +78,22 @@
                                 </a>
                             </div>
                         </div>
-                        <a href="#" target="_blank" class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <a href="#" target="_blank" class="btn btn-sm btn-white btn-social mt-4 mr-3 wow fadeIn delay-07s">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="#" target="_blank" class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <a href="#" target="_blank" class="btn btn-sm btn-white btn-social mt-4 mr-3 wow fadeIn delay-07s">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a href="#" target="_blank" id="btnWhatsapp" class="btn btn-sm btn-white btn-social mt-4">
+                        <a href="#" target="_blank" id="btnWhatsapp" class="btn btn-sm btn-white btn-social mt-4 wow fadeIn delay-07s">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
                     <div class="col-6">
-                        <div class="card-banner"></div>
-                        <div class="d-flex img-banner">
+                        <div class="card-banner wow fadeIn delay-02s"></div>
+                        <div class="d-flex img-banner wow fadeIn delay-05s">
                             <img src="img/burguer.png" alt="Imagem de Hamburguer">
                         </div>
-                        <div class="card card-case">
+                        <div class="card card-case wow fadeInRight delay-07s">
                             "Entrega rápida e funcionários simpáticos.
                             <br>A comida chegou quente e <br>
                             muito saborada"
@@ -112,14 +112,14 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-12 text-center mb-5">
+                    <div class="col-12 text-center mb-5 wow fadeIn">
                         <span class="hint-title"><strong>Serviços</strong></span>
                         <h1 class="title">
                             <strong>Como são nossos serviços?</strong>
                         </h1>
                     </div>
 
-                    <div class="col-4 mb-5">
+                    <div class="col-4 mb-5 wow fadeInUp">
                         <div class="card-icon text-center">
                             <img src="img/icone-pedido.svg" width="150">
                         </div>
@@ -131,8 +131,8 @@
                         </div>
                     </div>
 
-                    <div class="col-4">
-                        <div class="card-icon text-center">
+                    <div class="col-4 wow fadeInUp">
+                        <div class="card-icon text-center ">
                             <img src="img/icone-delivery.svg" width="250">
                         </div>
                         <div class="card-text text-center mt-3">
@@ -143,8 +143,8 @@
                         </div>
                     </div>
 
-                    <div class="col-4">
-                        <div class="card-icon text-center">
+                    <div class="col-4 wow fadeInUp">
+                        <div class="card-icon text-center ">
                             <img src="img/icone-qualidade.svg" width="250">
                         </div>
                         <div class="card-text text-center mt-3">
@@ -165,14 +165,14 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-12 text-center mb-5">
+                    <div class="col-12 text-center mb-5 wow fadeIn">
                         <span class="hint-title"><strong>Cardapio</strong></span>
                         <h1 class="title">
                             <strong>Conheça o nosso cardápio</strong>
                         </h1>
                     </div>
 
-                    <div class="col-12 container-menu">
+                    <div class="col-12 container-menu wow fadeInUp">
                         <a id = "menu-burgers" class="btn btn-white btn-sm mr-3 active" onclick="cardapio.metodos.obterItensCardapio('burgers')">
                             <i class="fas fa-hamburger"></i>&nbsp; Burgers
                         </a>
@@ -199,7 +199,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 text-center">
+                    <div class="col-12 text-center wow fadeIn">
                         <a id="btnVerMais" class="btn btn-white btn-sm" onclick="cardapio.metodos.verMais()">
                             Ver mais
                         </a>
@@ -215,19 +215,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-5 text-center">
-                        <div class="card-depoimentos"></div>
-                        <div class="d-flex img-banner">
+                        <div class="card-depoimentos wow fadeIn"></div>
+                        <div class="d-flex img-banner wow fadeInLeft delay-02s">
                             <img src="img/pizzas.png" alt="imagem de pizza">
                         </div>
                     </div>
 
                     <div class="col-7">
-                        <span class="hint-title"><strong>Depoimentos</strong></span>
-                        <h1 class="title">
+                        <span class="hint-title wow fadeIn"><strong>Depoimentos</strong></span>
+                        <h1 class="title wow fadeIn">
                             <strong>O que dizem sobre nós?</strong>
                         </h1>
                         <div class="mb-5">
-                            <div class="depoimento" id="depoimento-1">
+                            <div class="depoimento animated fadeIn" id="depoimento-1">
                                 <div class="container-dados-depoimento">
                                     <div class="imagem-depoimento"></div>
                                     <div>
@@ -252,7 +252,7 @@
                                 </p>
                             </div>
 
-                            <div class="depoimento hidden" id="depoimento-2">
+                            <div class="depoimento hidden animated fadeIn" id="depoimento-2">
                                 <div class="container-dados-depoimento">
                                     <div class="imagem-depoimento"></div>
                                     <div>
@@ -277,7 +277,7 @@
                                 </p>
                             </div>
 
-                            <div class="depoimento hidden" id="depoimento-3">
+                            <div class="depoimento hidden animated fadeIn" id="depoimento-3">
                                 <div class="container-dados-depoimento">
                                     <div class="imagem-depoimento"></div>
                                     <div>
@@ -301,9 +301,9 @@
                                 </p>
                             </div>
                         </div>
-                        <a id="btnDepoimento-1" class="btn btn-sm btn-white btn-social active mr-3" onclick="cardapio.metodos.abrirDepoimento(1)">1</a>
-                        <a id="btnDepoimento-2" class="btn btn-sm btn-white btn-social mr-3" onclick="cardapio.metodos.abrirDepoimento(2)">2</a>
-                        <a id="btnDepoimento-3" class="btn btn-sm btn-white btn-social" onclick="cardapio.metodos.abrirDepoimento(3)">3</a>
+                        <a id="btnDepoimento-1" class="btn btn-sm btn-white btn-social active mr-3 wow fadeIn" onclick="cardapio.metodos.abrirDepoimento(1)">1</a>
+                        <a id="btnDepoimento-2" class="btn btn-sm btn-white btn-social mr-3 wow fadeIn" onclick="cardapio.metodos.abrirDepoimento(2)">2</a>
+                        <a id="btnDepoimento-3" class="btn btn-sm btn-white btn-social wow fadeIn" onclick="cardapio.metodos.abrirDepoimento(3)">3</a>
                     </div>
                 </div>
             </div>
@@ -313,7 +313,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <div class="card-secondary">
+                        <div class="card-secondary wow fadeInUp">
                             <div class="row">
                                 <div class="col-7">
                                     <span class="hint-title"><strong>Reserva</strong></span>
@@ -325,7 +325,7 @@
                                         <br>
                                         Reserve sua data e horário de forma simples e rápida.
                                     </p>
-                                    <a class="btn btn-yellow mt-4" href="#" id="btnReserva" target="_blank">
+                                    <a class="btn btn-yellow mt-4 wow fadeIn delay-05s" href="#" id="btnReserva" target="_blank">
                                         Fazer reserva
                                     </a>
                                 </div>
@@ -347,17 +347,17 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-3 container-logo-footer">
+                <div class="col-3 container-logo-footer wow fadeIn">
                     <img src="img/logo.png" class="logo-footer" alt="Logo">
                 </div>
 
-                <div class="col-6 container-texto-footer">
+                <div class="col-6 container-texto-footer wow fadeIn">
                     <p class="mb-0">
                         <strong>Menu On-line</strong> &copy; Todos os direitos reservados
                     </p>
                 </div>
 
-                <div class="col-3 container-redes-footer">
+                <div class="col-3 container-redes-footer wow fadeIn">
                     <a href="#" class="btn btn-sm btn-white btn-social mr-3">
                         <i class="fab fa-instagram"></i>
                     </a>
@@ -373,7 +373,7 @@
         </div>
     </footer>
 
-    <div class="modal-full hidden" id="modalCarrinho">
+    <div class="modal-full hidden animated fadeIn" id="modalCarrinho">
         <div class="m-header">
             <div class="container">
                 <a class="btn btn-white btn-sm float-right" onclick="cardapio.metodos.abrirCarrinho(false)">
@@ -391,12 +391,12 @@
         </div>
         <div class="m-body">
             <div class="container">
-                <div class="row mr-0 ml-0 hidden" id="itensCarrinho">
+                <div class="row mr-0 ml-0 hidden animated fadeIn" id="itensCarrinho">
 
                     
                 </div>
 
-                <div class="row mr-0 ml-0 hidden" id="localEntrega">
+                <div class="row mr-0 ml-0 hidden animated fadeIn" id="localEntrega">
 
                     <div class="col-4">
                         <div class="form-group container-cep">
@@ -479,7 +479,7 @@
                     </div>
                 </div>
 
-                <div class="rowmr-0 ml-0 " id="resumoCarrinho">
+                <div class="rowmr-0 ml-0 animated fadeIn" id="resumoCarrinho">
                     <div class="col-12">
                         <p class="title-carrinho mt-4">
                             <strong>Itens do pedido:</strong>
@@ -544,9 +544,12 @@
     <script src="js/jquery-1.12.4.min.js"></script>
     <script src="js/modernizr-3.5.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/dados.js"></script>
     <script src="js/app.js"></script>
+
+    <script>new WOW().init()</script>
 
 </body>
 
