--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsivo.css">
     <link rel="stylesheet" href="css/animate.css">
-    <title>(Restaurante) - Seja bem-vindo!</title>
+    <title>(Restaurante) - Seja bem-vindo!</title>   
 </head>
 
 <body>
@@ -17,14 +19,14 @@
 
     </div>
 
-    <a class="botao-carrinho hidden animated bounceIn" onclick="cardapio.metodos.abrirCarrinho(true)">
+    <a id="btnAbrirCarrinho" class="botao-carrinho hidden animated bounceIn" onclick="cardapio.metodos.abrirCarrinho(true)">
         <div class="badge-total-carrinho">0</div>
         <i class="fa fa-shopping-bag"></i>
     </a>
 
     <header>
         <div class="container">
-            <nav class="navbar navbar-expand-lg pl-0 pr-0">
+            <nav class="navbar navbar-expand-lg pl-0 pr-0 col-one">
                 <a class="navbar-brand wow fadeIn">
                     <img src="img/logo.png" width='160' alt="logo do menu online" class="img-logo">
                 </a>
@@ -58,7 +60,7 @@
         <section class="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6 col-md-6 col-sm-12 col-one">
                         <div class="d-flex text-banner">
                             <h1 class="wow fadeInLeft"><strong>Escolha sua comida <strong class="color-primary">favorita.</strong></strong>
                             </h1>
@@ -66,7 +68,7 @@
                                 segura.</p>
 
                             <div class="wow fadeIn delay-05s">
-                                <a class="btn btn-yellow mt-4 mr-3">
+                                <a href="#cardapio" class="btn btn-yellow mt-4 mr-3">
                                     Ver cardápio
                                 </a>
 
@@ -88,7 +90,7 @@
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
-                    <div class="col-6">
+                    <div class="col-6 no-mobile">
                         <div class="card-banner wow fadeIn delay-02s"></div>
                         <div class="d-flex img-banner wow fadeIn delay-05s">
                             <img src="img/burguer.png" alt="Imagem de Hamburguer">
@@ -112,14 +114,14 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-12 text-center mb-5 wow fadeIn">
+                    <div class="col-12 col-one text-center mb-5 wow fadeIn">
                         <span class="hint-title"><strong>Serviços</strong></span>
                         <h1 class="title">
                             <strong>Como são nossos serviços?</strong>
                         </h1>
                     </div>
 
-                    <div class="col-4 mb-5 wow fadeInUp">
+                    <div class="col-12 col-lg-4 col-md-4 col-sm-12 col-one mb-5 wow fadeInUp">
                         <div class="card-icon text-center">
                             <img src="img/icone-pedido.svg" width="150">
                         </div>
@@ -131,7 +133,7 @@
                         </div>
                     </div>
 
-                    <div class="col-4 wow fadeInUp">
+                    <div class="col-12 col-lg-4 col-md-4 col-sm-12 col-one wow fadeInUp">
                         <div class="card-icon text-center ">
                             <img src="img/icone-delivery.svg" width="250">
                         </div>
@@ -143,7 +145,7 @@
                         </div>
                     </div>
 
-                    <div class="col-4 wow fadeInUp">
+                    <div class="col-12 col-lg-4 col-md-4 col-sm-12 col-one wow fadeInUp">
                         <div class="card-icon text-center ">
                             <img src="img/icone-qualidade.svg" width="250">
                         </div>
@@ -165,14 +167,14 @@
 
             <div class="container">
                 <div class="row">
-                    <div class="col-12 text-center mb-5 wow fadeIn">
+                    <div class="col-12 col-one text-center mb-5 wow fadeIn">
                         <span class="hint-title"><strong>Cardapio</strong></span>
                         <h1 class="title">
                             <strong>Conheça o nosso cardápio</strong>
                         </h1>
                     </div>
 
-                    <div class="col-12 container-menu wow fadeInUp">
+                    <div class="col-12 container-menu col-one wow fadeInUp">
                         <a id = "menu-burgers" class="btn btn-white btn-sm mr-3 active" onclick="cardapio.metodos.obterItensCardapio('burgers')">
                             <i class="fas fa-hamburger"></i>&nbsp; Burgers
                         </a>
@@ -193,13 +195,13 @@
                         </a>
                     </div>
 
-                    <div class="col-12">
+                    <div class="col-12 col-one">
                         <div class="row" id="itensCardapio">
 
                         </div>
                     </div>
 
-                    <div class="col-12 text-center wow fadeIn">
+                    <div class="col-12 col-one text-center wow fadeIn">
                         <a id="btnVerMais" class="btn btn-white btn-sm" onclick="cardapio.metodos.verMais()">
                             Ver mais
                         </a>
@@ -214,14 +216,15 @@
             <div class="background-depoimentos"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-5 text-center">
+
+                    <div class="col-5 no-mobile text-center">
                         <div class="card-depoimentos wow fadeIn"></div>
                         <div class="d-flex img-banner wow fadeInLeft delay-02s">
                             <img src="img/pizzas.png" alt="imagem de pizza">
                         </div>
                     </div>
 
-                    <div class="col-7">
+                    <div class="col-12 col-lg-7 col-md-7 col-sm-12 col-one">
                         <span class="hint-title wow fadeIn"><strong>Depoimentos</strong></span>
                         <h1 class="title wow fadeIn">
                             <strong>O que dizem sobre nós?</strong>
@@ -312,10 +315,10 @@
         <section class="reserva" id="reservas">
             <div class="container">
                 <div class="row">
-                    <div class="col-12">
+                    <div class="col-12 col-one">
                         <div class="card-secondary wow fadeInUp">
                             <div class="row">
-                                <div class="col-7">
+                                <div class="col-12 col-lg-7 col-md-7 col-sm-12">
                                     <span class="hint-title"><strong>Reserva</strong></span>
                                     <h1 class="title">
                                         <strong>Quer reservar um horário?</strong>
@@ -329,7 +332,7 @@
                                         Fazer reserva
                                     </a>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-5 no-mobile">
                                     <div class="card-reserva"></div>
                                     <div class="d-flex img-banner">
                                         <img src="img/icone-reserva.svg" alt="imagem de reserva">
@@ -347,17 +350,17 @@
     <footer>
         <div class="container">
             <div class="row">
-                <div class="col-3 container-logo-footer wow fadeIn">
+                <div class="col-12 col-lg-3 col-md-3 col-12 col-one container-logo-footer wow fadeIn">
                     <img src="img/logo.png" class="logo-footer" alt="Logo">
                 </div>
 
-                <div class="col-6 container-texto-footer wow fadeIn">
+                <div class="col-12 col-lg-6 col-md-6 col-12 col-one container-texto-footer wow fadeIn">
                     <p class="mb-0">
                         <strong>Menu On-line</strong> &copy; Todos os direitos reservados
                     </p>
                 </div>
 
-                <div class="col-3 container-redes-footer wow fadeIn">
+                <div class="col-12 col-lg-3 col-md-3 col-12 col-one container-redes-footer wow fadeIn">
                     <a href="#" class="btn btn-sm btn-white btn-social mr-3">
                         <i class="fab fa-instagram"></i>
                     </a>
@@ -398,51 +401,51 @@
 
                 <div class="row mr-0 ml-0 hidden animated fadeIn" id="localEntrega">
 
-                    <div class="col-4">
+                    <div class="col-12 col-lg-4 col-md-4 col-sm-12">
                         <div class="form-group container-cep">
                             <label>CEP:</label>
                             <input id="txtCEP" type="text" class="form-control">
                             <a class="btn btn-yellow btn-sm" onclick='cardapio.metodos.buscarCEP()'><i class="fa fa-search"></i></a>
                         </div>
                     </div>
-                    <div class="col-8"></div>
+                    <div class="col-8 no-mobile"></div>
 
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6 col-md-6 col-sm-12">
                         <div class="form-group">
                             <label>Endereço:</label>
                             <input type="text" id="txtEndereco" class="form-control">
                         </div>
                     </div>
 
-                    <div class="col-4">
+                    <div class="col-12 col-lg-4 col-md-4 col-sm-12">
                         <div class="form-group">
                             <label>Bairro:</label>
                             <input type="text" id="txtBairro" class="form-control">
                         </div>
                     </div>
 
-                    <div class="col-2">
+                    <div class="col-12 col-lg-2 col-md-2 col-sm-12">
                         <div class="form-group">
                             <label>Número:</label>
                             <input type="text" id="txtNumero" class="form-control">
                         </div>
                     </div>
 
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6 col-md-6 col-sm-12">
                         <div class="form-group">
                             <label>Cidade:</label>
                             <input type="text" id="txtCidade" class="form-control">
                         </div>
                     </div>
 
-                    <div class="col-4">
+                    <div class="col-12 col-lg-4 col-md-4 col-sm-12">
                         <div class="form-group">
                             <label>Complemento:</label>
                             <input type="text" id="txtComplemento" class="form-control">
                         </div>
                     </div>
 
-                    <div class="col-2">
+                    <div class="col-12 col-lg-2 col-md-2 col-sm-12">
                         <div class="form-group">
                             <label>UF:</label>
                             <select id="ddlUF" class="form-control">
